crates/runtime/benches/snapshots/bench__s3_arrow_memory_tpch_simple_q5_explain.snap
---
source: crates/runtime/benches/bench.rs
description: "Query: select SUM(o.o_totalprice) as total_price, l.l_linestatus from orders o join lineitem l on o.o_orderkey = l.l_orderkey group by l.l_linestatus order by total_price desc"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                            |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: total_price DESC NULLS FIRST                                                                                                              |
|               |   Projection: sum(o.o_totalprice) AS total_price, l.l_linestatus                                                                                |
|               |     Aggregate: groupBy=[[l.l_linestatus]], aggr=[[sum(o.o_totalprice)]]                                                                         |
|               |       Projection: o.o_totalprice, l.l_linestatus                                                                                                |
|               |         Inner Join: o.o_orderkey = l.l_orderkey                                                                                                 |
|               |           SubqueryAlias: o                                                                                                                      |
|               |             BytesProcessedNode                                                                                                                  |
|               |               TableScan: orders projection=[o_orderkey, o_totalprice]                                                                           |
|               |           SubqueryAlias: l                                                                                                                      |
|               |             BytesProcessedNode                                                                                                                  |
|               |               TableScan: lineitem projection=[l_orderkey, l_linestatus]                                                                         |
| physical_plan | SortPreservingMergeExec: [total_price@0 DESC]                                                                                                   |
|               |   SortExec: expr=[total_price@0 DESC], preserve_partitioning=[true]                                                                             |
|               |     ProjectionExec: expr=[sum(o.o_totalprice)@1 as total_price, l_linestatus@0 as l_linestatus]                                                 |
|               |       AggregateExec: mode=FinalPartitioned, gby=[l_linestatus@0 as l_linestatus], aggr=[sum(o.o_totalprice)]                                    |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                             |
|               |           RepartitionExec: partitioning=Hash([l_linestatus@0], 4), input_partitions=4                                                           |
|               |             AggregateExec: mode=Partial, gby=[l_linestatus@1 as l_linestatus], aggr=[sum(o.o_totalprice)]                                       |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                       |
|               |                 HashJoinExec: mode=Partitioned, join_type=Inner, on=[(o_orderkey@0, l_orderkey@0)], projection=[o_totalprice@1, l_linestatus@3] |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                   |
|               |                     RepartitionExec: partitioning=Hash([o_orderkey@0], 4), input_partitions=4                                                   |
|               |                       BytesProcessedExec                                                                                                        |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1                                                    |
|               |                           SchemaCastScanExec                                                                                                    |
|               |                             MemoryExec: partitions=1, partition_sizes=[0]                                                                       |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                   |
|               |                     RepartitionExec: partitioning=Hash([l_orderkey@0], 4), input_partitions=4                                                   |
|               |                       BytesProcessedExec                                                                                                        |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1                                                    |
|               |                           SchemaCastScanExec                                                                                                    |
|               |                             MemoryExec: partitions=1, partition_sizes=[0]                                                                       |
|               |                                                                                                                                                 |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
