crates/runtime/benches/snapshots/bench__s3_arrow_memory_tpch_simple_q6_explain.snap
---
source: crates/runtime/benches/bench.rs
description: "Query: SELECT * FROM (SELECT o_orderkey + 1 FROM orders) AS c(key) LIMIT 10\n"
---
+---------------+----------------------------------------------------------------------------------+
| plan_type     | plan                                                                             |
+---------------+----------------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                                 |
|               |   Projection: CAST(orders.o_orderkey AS Int64) + Int64(1) AS key                 |
|               |     Limit: skip=0, fetch=10                                                      |
|               |       BytesProcessedNode                                                         |
|               |         TableScan: orders projection=[o_orderkey]                                |
| physical_plan | ProjectionExec: expr=[CAST(o_orderkey@0 AS Int64) + 1 as key]                    |
|               |   RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1           |
|               |     GlobalLimitExec: skip=0, fetch=10                                            |
|               |       CoalescePartitionsExec                                                     |
|               |         BytesProcessedExec                                                       |
|               |           SchemaCastScanExec                                                     |
|               |             RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1 |
|               |               MemoryExec: partitions=1, partition_sizes=[184]                    |
|               |                                                                                  |
+---------------+----------------------------------------------------------------------------------+
