crates/runtime/benches/snapshots/bench__s3_arrow_memory_use_source_clickbench_q1.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+----------+
| count(*) |
+----------+
| 99997497 |
+----------+
