crates/runtime/benches/snapshots/bench__s3_arrow_memory_use_source_clickbench_q13.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+---------------------------+-------+
| SearchPhrase              | c     |
+---------------------------+-------+
| карелки                   | 70263 |
| албатрутдин               | 34675 |
| смотреть онлайн           | 24580 |
| смотреть онлайн бесплатно | 21647 |
| смотреть                  | 19707 |
| мангу в зарабей грама     | 19195 |
| дружке помещение          | 17284 |
| galaxy table              | 16746 |
| экзоидные                 | 16620 |
| сколько мытищи            | 12317 |
+---------------------------+-------+
